# mirai

./: .gitignore  pyproject.toml
mirai/: agent.py  main.py
mirai/tools/: time_tool.py
